[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/minigames/BlackJack.gd" type="Script" id=1]
[ext_resource path="res://themes/Blur.tres" type="Material" id=3]
[ext_resource path="res://assets/UI/textbox.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/Born2bSportyV2.ttf" type="DynamicFontData" id=13]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 13 )

[node name="BlackJackUI" type="CanvasLayer"]

[node name="BlackJackControl" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -537.0
margin_top = -361.0
margin_right = 537.0
margin_bottom = 361.0
script = ExtResource( 1 )

[node name="Blur" type="ColorRect" parent="BlackJackControl"]
material = ExtResource( 3 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1265.65
margin_top = -827.3
margin_right = 1974.35
margin_bottom = 1332.7
color = Color( 1, 1, 1, 0 )

[node name="NinePatchRect" type="NinePatchRect" parent="BlackJackControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -325.0
margin_top = -200.0
margin_right = 325.0
margin_bottom = 200.0
texture = ExtResource( 4 )
patch_margin_left = 64
patch_margin_top = 64
patch_margin_right = 64
patch_margin_bottom = 64

[node name="Header" type="RichTextLabel" parent="BlackJackControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -181.0
margin_right = 200.0
margin_bottom = -131.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]====== [color=green]Card Game[/color] ======"
text = "====== Card Game ======"
scroll_active = false

[node name="DealerControl" type="Control" parent="BlackJackControl"]
margin_right = 40.0
margin_bottom = 40.0

[node name="DealerLabel" type="Label" parent="BlackJackControl/DealerControl"]
margin_left = 250.0
margin_top = 235.0
margin_right = 370.0
margin_bottom = 271.0
custom_fonts/font = SubResource( 2 )
text = "Dealer: XX"
align = 1

[node name="Card1Position2D" type="Position2D" parent="BlackJackControl/DealerControl"]
position = Vector2( 440, 285 )

[node name="Card2Position2D" type="Position2D" parent="BlackJackControl/DealerControl"]
position = Vector2( 500, 285 )

[node name="PlayerControl" type="Control" parent="BlackJackControl"]
margin_right = 40.0
margin_bottom = 40.0

[node name="PlayerLabel" type="Label" parent="BlackJackControl/PlayerControl"]
margin_left = 250.0
margin_top = 415.0
margin_right = 370.0
margin_bottom = 451.0
custom_fonts/font = SubResource( 2 )
text = "Player: XX"
align = 1

[node name="Card1Position2D" type="Position2D" parent="BlackJackControl/PlayerControl"]
position = Vector2( 440, 465 )

[node name="Card2Position2D" type="Position2D" parent="BlackJackControl/PlayerControl"]
position = Vector2( 500, 465 )
